fixed footer icons alignment

--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -15,6 +15,7 @@
 
     li {
       margin-right: 2em;
+      margin-top: 0;
       padding: 5px 0;
       position: relative;
 
